[package]
name = "scipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "^0.37", features = ["lazy"] }
russcip = { version = "0.3.4", features = ["bundled"] }
reqwest = { version = "x", features = ["blocking"] }
color-eyre = "x"
